--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 // Importing components
 @use './components/footer';
 @use './components/header';
+@use './components/button';
+@use './components/hero';
