--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,8 +3,9 @@
 :root {
   --color-black: #000000;
   --color-white: #ffffff;
-  --color-dark-blue: #111747;
   --color-light: #FFF5E5;
+  --color-gray: #F7F5EE;
+  --color-dark-blue: #111747;
   --color-primary: #ffbc02;
   --color-secondary: #009fb7;
 
