feat: enhance landing page with new section and footer structure

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,1 +1,35 @@
-<footer></footer>
+<footer class="footer">
+  <div class="footer__container container">
+    <div class="footer__main">
+      <img src="/images/logo.webp" alt="" class="footer__logo" />
+      <ul class="footer__socials-list">
+        <li class="footer__socials-item">
+          <a href="#" class="footer__socials-link">
+            <img src="/images/facebook.svg" alt="" class="footer__socials-icon" />
+          </a>
+        </li>
+        <li class="footer__socials-item">
+          <a href="#" class="footer__socials-link">
+            <img src="/images/facebook.svg" alt="" class="footer__socials-icon" />
+          </a>
+        </li>
+        <li class="footer__socials-item">
+          <a href="#" class="footer__socials-link">
+            <img src="/images/facebook.svg" alt="" class="footer__socials-icon" />
+          </a>
+        </li>
+        <li class="footer__socials-item">
+          <a href="#" class="footer__socials-link">
+            <img src="/images/facebook.svg" alt="" class="footer__socials-icon" />
+          </a>
+        </li>
+        <li class="footer__socials-item">
+          <a href="#" class="footer__socials-link">
+            <img src="/images/facebook.svg" alt="" class="footer__socials-icon" />
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__copyright"></div>
+  </div>
+</footer>
