feat: add smooth scrolling and back-to-top button functionality; update dependencies and styles

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer section">
   <div class="footer__container container">
     <div class="footer__main">
       <img src="/images/logo.webp" alt="" class="footer__logo" />
@@ -10,7 +10,7 @@
         </li>
         <li class="footer__socials-item">
           <a href="#" class="footer__socials-link">
-            <img src="/images/facebook.svg" alt="" class="footer__socials-icon" />
+            <img src="/images/G.svg" alt="" class="footer__socials-icon" />
           </a>
         </li>
         <li class="footer__socials-item">
@@ -30,6 +30,8 @@
         </li>
       </ul>
     </div>
-    <div class="footer__copyright"></div>
+    <div class="footer__copyright">
+      <p>Golden Care Home Health  •  1917 Trade Center Way Ste. 2, Naples, FL 34109 • HHA LICENSE 299994207</p>
+    </div>
   </div>
 </footer>
