--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@
   --color-gray: #F7F5EE;
   --color-dark-blue: #111747;
   --color-primary: #ffbc02;
+  --color-secondary-opacity: #009fb77d;
   --color-secondary: #009fb7;
 
   --font-family-base: "DroidSans", sans-serif;
