--- a/src/styles/components/back-top-button.scss
+++ b/src/styles/components/back-top-button.scss
@@ -1,28 +1,36 @@
 @use "../helpers" as *;
 
-.to-top-button {
+.back-top-button {
+  --button-background: #009fb77d;
+  --button-width: #{rem(50)};
+  --button-height: #{rem(25)};
+  --arrow-width: #{rem(30)};
+  --arrow-height: #{rem(40)};
+  --arrow-color: #fff;
+  --border-radius: #{rem(8)};
+
   position: fixed;
   bottom: 0;
   left: 50%;
   z-index: 9999;
   display: flex;
-  visibility: hidden;
   align-items: center;
   justify-content: center;
-  width: rem(50);
-  height: rem(25);
-  background-color: var(--color-secondary-opacity);
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
+  visibility: hidden;
+  width: var(--button-width);
+  height: var(--button-height);
+  background-color: var(--button-background);
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
   opacity: 0;
   backdrop-filter: blur(5px);
   transform: translateX(-50%) translateY(100%);
   transition: all 0.3s ease;
 
   svg {
-    width: rem(30);
-    height: rem(40);
-    color: #fff;
+    width: var(--arrow-width);
+    height: var(--arrow-height);
+    color: var(--arrow-color);
   }
 
   &.is-visible {
