--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @use "./components/cta";
 @use "./components/services";
 @use "./components/testimonials";
+@use "./components/contacts";
 @use "./components/back-top-button";
 
 @import "../../node_modules/swiper/swiper.min.css";
