--- a/src/styles/components/services.scss
+++ b/src/styles/components/services.scss
@@ -23,6 +23,8 @@
     }
   }
   &__list {
+    max-width: rem(1520);
+    margin: 0 auto;
     display: grid;
     gap: rem(24) rem(32);
     grid-template-columns: repeat(auto-fit, minmax(rem(300), 1fr));
@@ -54,6 +56,7 @@
     h3 {
       font-size: fluid(20, 24);
       margin-bottom: rem(16);
+      font-family: var(--font-family-base);
     }
     p {
       font-size: rem(16);
